# HuaweiCodecraft2022

./: CodeCraft_zip.sh  README.md  build.sh
CodeCraft-2022/src/: CMakeLists.txt  CodeCraft-2022.cpp  ISAP.cpp  ISAP.h  SiteNode.cpp  SiteNode.h  Solver.cpp  Solver.h  UserNode.cpp  UserNode.h
CodeCraft-2022/src/output/: details.csv  details.txt  details_demand.csv  solution.txt
CodeCraft-2022/src/sup_data/: demand_t1.csv  demand_t2.csv  demand_t3.csv  demand_t4.csv  demand_t5.csv  demand_t6.csv  qos_t1.csv  qos_t2.csv  qos_t3.csv  qos_t4.csv  qos_t5.csv  qos_t6.csv  site_bandwidth_t1.csv  site_bandwidth_t2.csv  site_bandwidth_t3.csv  site_bandwidth_t4.csv  site_bandwidth_t5.csv  site_bandwidth_t6.csv
